Revision history for Perl-Dist-APPerl
v0.1.1  2022-11-17
        Fix 5.10 support and broken pod link, thanks to MJGARDNER
        (GH#1).

v0.1.0  2022-11-13
        Fix issues with Time-HiRes Configure. Update to Cosmopolitan
        Libc v2.2 . Pin Perl version to configs.

v0.0.4  2022-10-15
        Make Actions release binaries executable

v0.0.3  2022-10-14
        Bumped cosmopolitan versions. Add category to apperlm list. Add
        leading '-' support to config parsing to remove items from an
        existing set.

v0.0.2  2022-10-10
        Add small builds to actions, rewrite acknowledgements.

v0.0.1  2022-10-10
        First packaged version, released on an unsuspecting world.