@@ -1,4 +1,10 @@
 Revision history for Perl-Dist-APPerl
+vX.X.X  2022-XX-XX
+        Enable cross-platform builds of `nobuild` configs. Switch
+        remaining `mv`, `cp`, `rm` shell commands to use their perl
+        equivalents. Add workaround to `apperlm` for running Info-ZIP
+        on Windows from APPerl.
+
 v0.1.1  2022-11-17
         Fix 5.10 support and broken pod link, thanks to MJGARDNER
         (GH#1).
